Add first-time tutorial and help menu
- Tutorial dialog shows on first launch
- Help icon (?) in toolbar to reopen tutorial
- Explains how to play the game
- Uses SharedPreferences to track if tutorial was shown

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.SixSeven" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SixSeven" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">#00ff41</item>
         <item name="colorPrimaryVariant">#0f3460</item>
         <item name="colorOnPrimary">#000000</item>
